# Gesture-Based-Drone-Control

./: .env.example  .gitignore  README.md  docker-compose.yml  makefile  pyproject.toml
.github/workflows/: blank.yml  lint.yml  main.yml  test.yml
apps/backend/: .gitignore  README.md  makefile  pyproject.toml  requirements.txt  uv-install.sh
apps/backend/app/: main.py
apps/backend/tests/: placeholder_test.py
apps/desktop/: main.js  preload.js
apps/frontend/: README.md  eslint.config.js  package.json  tailwind.config.js  tsconfig.json  vite.config.js
apps/frontend/public/: service-worker.js
apps/frontend/src/: App.jsx  index.css  main.jsx
apps/frontend/src/components/atoms/: Button.jsx  Card.jsx  Label.jsx  MetricValue.jsx  NavItem.jsx  StatusDot.jsx  Toggle.jsx
apps/frontend/src/components/molecules/: SideBar.jsx  StatCard.jsx
apps/mobile/: capacitor.config.ts
docs/: GIT.md
docs/diagrams/: Domain Model v1.1.drawio
infrastructure/docker/: backend.Dockerfile  frontend.Dockerfile
infrastructure/docker/airsim/: airsim.Dockerfile
infrastructure/scripts/: airsim_setup.sh
sandbox/: interactive-control.py  readme.md  stdin-control.py
services/: __init__.py  makefile  pyproject.toml
services/commands/: __init__.py  command.py  translator.py
services/cv-pipeline/camera/: camera_feed.py
services/cv-pipeline/gestures/: gesture_engine.py
services/cv-pipeline/gestures/recognizers/: gesture_recognizer.py  ml_based.py
services/cv-pipeline/hand-detection/: mediapipe_detector.py
services/cv-pipeline/processing/: async_queue.py  pipeline.py
services/cv_pipeline/camera/: camera_feed.py
services/cv_pipeline/gestures/: gesture_engine.py
services/cv_pipeline/gestures/recognizers/: gesture_recognizer.py  rule_based.py
services/drone-control/: controller.py
services/drone-control/adapters/: airsim.py  drone_adapter.py  gazebo.py  xfly.py
services/drone-control/command/: translator.py
services/drone_control/: controller.py
services/drone_control/adapters/: __init__.py  airsim_adapter.py  drone_adapter.py  xfly_adapter.py
services/drone_services.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/input/sources/: __init__.py  gesture_adapter.py  gesture_provider.py  input_adapter.py  keyboard_adapter.py  keyboard_provider.py
services/telemetry/: manager.py  observer.py
services/telemetry/storage/: postgres_repo.py  sqlite_repo.py
services/tests/: placeholder_services_test.py  test_imports.py
services/tests/cv_pipeline_testing/: test_camera_feed.py
