# services/pyproject.toml
# allow all services scripts to work a bit more cleanly with one another and eventually the apis

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "drone-services"
version = "0.1.0"
description = "CV pipeline, gesture recognition, and drone control adapters"
requires-python = ">=3.11"

dependencies = [
    "opencv-python>=4.8",
    "mediapipe>=0.10",
    "tornado==4.5.3",
    "numpy>=1.26",
    "msgpack-rpc-python",
    "backports.ssl-match-hostname",
]

[project.optional-dependencies]
airsim = ["airsim"]
dev    = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff"]

[tool.setuptools.packages.find]
where = ["."]
include = ["services*"]

[tool.uv.extra-build-dependencies]
airsim = [
    "numpy",
    "msgpack-rpc-python",
    "backports.ssl-match-hostname",
]